--- a/src/pages/one-detail/one-detail.html
+++ b/src/pages/one-detail/one-detail.html
@@ -13,6 +13,7 @@
     </div>
     <p>{{news.createdAt}}</p>
     <p>{{news.categories[0].name}}</p>
+    <img src="{{news.images[0]}}" />
     <div [innerHTML]="news.content"></div>
   </div>
 </ion-content>
