🔨 Refactor: 用其淫巧既暫時處理一下

--- a/src/pages/tabs-page/tabs-page.html
+++ b/src/pages/tabs-page/tabs-page.html
@@ -1,6 +1,13 @@
 <ion-tabs [selectedIndex]="mySelectedIndex" name="conference">
-  <ion-tab [root]="tab1Root" tabTitle="首頁" tabUrlPath="home-news"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="台灣"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="世界"></ion-tab>
-  <ion-tab [root]="tab4Root" tabTitle="生活"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="TopNews" tabUrlPath="home-news"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Taiwan"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="WorldPage"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="Life"></ion-tab>
+  <ion-tab [root]="tab5Root" tabTitle="Asia"></ion-tab>
+  <ion-tab [root]="tab6Root" tabTitle="Business"></ion-tab>
+  <ion-tab [root]="tab7Root" tabTitle="Sports"></ion-tab>
+  <ion-tab [root]="tab8Root" tabTitle="Travel"></ion-tab>
+  <ion-tab [root]="tab9Root" tabTitle="Art"></ion-tab>
+  <ion-tab [root]="tab10Root" tabTitle="Editorial"></ion-tab>
+  <ion-tab [root]="tab11Root" tabTitle="Hightlight"></ion-tab>
 </ion-tabs>
