🎨 Style: 更換預設圖

--- a/src/pages/tabs-page/tabs-page.html
+++ b/src/pages/tabs-page/tabs-page.html
@@ -1,7 +1,7 @@
 <ion-tabs [selectedIndex]="mySelectedIndex" name="conference">
   <ion-tab [root]="tab1Root" tabTitle="TopNews" tabUrlPath="home-news"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Taiwan"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="WorldPage"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="World"></ion-tab>
   <ion-tab [root]="tab4Root" tabTitle="Life"></ion-tab>
   <ion-tab [root]="tab5Root" tabTitle="Asia"></ion-tab>
   <ion-tab [root]="tab6Root" tabTitle="Business"></ion-tab>
