--- a/src/pages/one-detail/one-detail.html
+++ b/src/pages/one-detail/one-detail.html
@@ -1,12 +1,12 @@
 <ion-header>
   <ion-navbar>
-    <ion-title *ngIf="news">{{news.title}}</ion-title>
+    <ion-title *ngIf="news" [innerHTML]="news.title"></ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
   <div *ngIf="news">
-    <h1>{{news.title}}</h1>
+    <h1 [innerHTML]="news.title"></h1>
     <hr>
     <div>
       <!-- <img src="{{news.authors[0].avatars[24]}}"> -->
